<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    tools:context="com.ui.goonzs.com.ipeercloud.com.MainActivity">

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_heightPercent="6%h"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="#111111"
            />
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <View
        android:id="@+id/line_top"
        android:layout_below="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e1e1e1"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_top"
        >
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DCDCDC"
            android:orientation="vertical">
            <com.zhy.android.percent.support.PercentRelativeLayout
                android:id="@+id/prl_changepwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="13.5%w"
                app:layout_marginTopPercent="6.5%w"
                android:background="#ffffff"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/logonuser"
                    android:textColor="#111111"
                    android:textSize="11sp"
                    android:gravity="center_vertical"
                    app:layout_paddingLeftPercent="2.5%w"
                    />
                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/iv_right1"
                    android:text="398982030@qq.com"
                    android:textColor="#999999"
                    android:layout_centerVertical="true"
                    app:layout_marginRightPercent="2.5%w"
                    android:textSize="11sp"
                    />
                <ImageView
                    android:id="@+id/iv_right1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_rightbtn"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:layout_marginRightPercent="2.5%w"
                    />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="13.5%w"
                app:layout_marginTopPercent="6.5%w"
                android:background="#ffffff"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/camerasync"
                    android:textColor="#111111"
                    android:textSize="11sp"
                    android:gravity="center_vertical"
                    app:layout_paddingLeftPercent="2.5%w"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/iv_right2"
                    android:text="@string/off"
                    android:textColor="#999999"
                    android:layout_centerVertical="true"
                    app:layout_marginRightPercent="2.5%w"
                    android:textSize="11sp"
                    />
                <ImageView
                    android:id="@+id/iv_right2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_rightbtn"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:layout_marginRightPercent="2.5%w"
                    />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:id="@+id/prl_connectcloud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="13.5%w"
                app:layout_marginTopPercent="6.5%w"
                android:background="#ffffff"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/linkyourgoonas"
                    android:textColor="#111111"
                    android:textSize="11sp"
                    android:gravity="center_vertical"
                    app:layout_paddingLeftPercent="2.5%w"
                    />
                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/iv_right3"
                    android:text="@string/off"
                    android:textColor="#999999"
                    android:layout_centerVertical="true"
                    app:layout_marginRightPercent="2.5%w"
                    android:textSize="11sp"
                    />
                <ImageView
                    android:id="@+id/iv_right3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_rightbtn"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:layout_marginRightPercent="2.5%w"
                    />
            </com.zhy.android.percent.support.PercentRelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e1e1e1"
                app:layout_marginLeftPercent="2.5%w"
                />
            <com.zhy.android.percent.support.PercentRelativeLayout
                android:id="@+id/prl_addnewcloud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="13.5%w"
                android:background="#ffffff"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/addnewinternet"
                    android:textColor="#111111"
                    android:textSize="11sp"
                    android:gravity="center_vertical"
                    app:layout_paddingLeftPercent="2.5%w"
                    />
                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/iv_right4"
                    android:text="@string/off"
                    android:textColor="#999999"
                    android:layout_centerVertical="true"
                    app:layout_marginRightPercent="2.5%w"
                    android:textSize="11sp"
                    />
                <ImageView
                    android:id="@+id/iv_right4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_rightbtn"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:layout_marginRightPercent="2.5%w"
                    />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="13.5%w"
                app:layout_marginTopPercent="6.5%w"
                android:background="#ffffff"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/ver"
                    android:textColor="#111111"
                    android:textSize="11sp"
                    android:gravity="center_vertical"
                    app:layout_paddingLeftPercent="2.5%w"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/iv_right5"
                    android:text="1.0.3-001.003.001.001-001.003.001.001"
                    android:textColor="#999999"
                    android:layout_centerVertical="true"
                    app:layout_marginRightPercent="2.5%w"
                    android:textSize="11sp"
                    />
                <ImageView
                    android:id="@+id/iv_right5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_rightbtn"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:layout_marginRightPercent="2.5%w"
                    />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:id="@+id/prl_clearcache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="13.5%w"
                app:layout_marginTopPercent="6.5%w"
                android:background="#ffffff"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/clearcaches"
                    android:textColor="#111111"
                    android:textSize="11sp"
                    android:gravity="center"
                    app:layout_paddingLeftPercent="2.5%w"
                    />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="13.5%w"
                app:layout_marginTopPercent="6.5%w"
                android:background="#ffffff"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/invitefriends"
                    android:textColor="#111111"
                    android:textSize="11sp"
                    android:gravity="center"
                    app:layout_paddingLeftPercent="2.5%w"
                    />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:id="@+id/prl_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="13.5%w"
                app:layout_marginTopPercent="6.5%w"
                android:background="#ffffff"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/exitapp"
                    android:textColor="#111111"
                    android:textSize="11sp"
                    android:gravity="center"
                    app:layout_paddingLeftPercent="2.5%w"
                    />
            </com.zhy.android.percent.support.PercentRelativeLayout>

        </com.zhy.android.percent.support.PercentLinearLayout>

    </ScrollView>

</com.zhy.android.percent.support.PercentRelativeLayout>
