<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.ui.goonzs.com.ipeercloud.com.MainActivity">
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_heightPercent="5%h"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="80%h"
            app:layout_heightPercent="80%h"
            android:src="@mipmap/icon_recent_state"
            android:layout_centerVertical="true"
            app:layout_marginLeftPercent="2.5%"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/recents"
            android:textColor="#111111"
            />
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <View
        android:id="@+id/line_top"
        android:layout_below="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e1e1e1"
        />

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/prl_search"
        android:layout_below="@+id/line_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f6f6f6"
        app:layout_heightPercent="8%h"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_marginPercent="15%h"
            android:background="@drawable/bg_round_white"
            android:layout_centerInParent="true"
            android:hint="@string/search"
            android:textSize="12sp"
            android:textColorHint="#999999"
            android:gravity="center"
            />
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <TextView
        android:id="@+id/tv_groupview"
        android:layout_below="@+id/prl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_heightPercent="5%w"
        android:background="#DCE8EF"
        app:layout_paddingLeftPercent="2.5%w"
        android:gravity="center_vertical"
        android:text="TODAY"
        android:textSize="12sp"
        android:textColor="#000000"
        />

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_below="@+id/tv_groupview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_heightPercent="13.5%w"
            android:background="#ffffff"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/logonuser"
                android:textColor="#111111"
                android:textSize="11sp"
                android:gravity="center_vertical"
                app:layout_paddingLeftPercent="2.5%w"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/logonuser"
                android:textColor="#111111"
                android:textSize="11sp"
                android:gravity="center_vertical"
                app:layout_paddingLeftPercent="2.5%w"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/iv_right1"
                android:text="398982030@qq.com"
                android:textColor="#999999"
                android:layout_centerVertical="true"
                app:layout_marginRightPercent="2.5%w"
                android:textSize="11sp"
                />
            <ImageView
                android:id="@+id/iv_right1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_rightbtn"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:layout_marginRightPercent="2.5%w"
                />
        </com.zhy.android.percent.support.PercentRelativeLayout>


    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentRelativeLayout>
